# memoryos

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.skills/: SYSTEM_PROMPT.md  SYSTEM_PROMPT.txt
agents/: __init__.py  compose.py  context_builder.py  memory_client.py  session_manager.py
aimemoryos/: __init__.py  main.py
aimemoryos/agents/: context_builder.py  memory_client.py  session_manager.py
aimemoryos/core/: config.py  interfaces.py  runtime.py
aimemoryos/graph/: ontology.py
aimemoryos/ingestion/: chunker.py  deduplicator.py  multimodal_router.py  pdf_loader.py  pipeline.py
aimemoryos/memory/: episodic.py  importance.py  procedural.py  semantic.py  working.py
core/: __init__.py  config.py  exceptions.py  interfaces.py  runtime.py
graph/: ontology.py  traversal.py
ingestion/: chunker.py  deduplicator.py  multimodal_router.py  pdf_loader.py  pipeline.py
memory/: episodic.py  importance.py  models.py  procedural.py  semantic.py  working.py
memoryos/: __init__.py  main.py
retrieval/: __init__.py  context_assembler.py  engine.py  graph_retriever.py  spreading_activation.py  vector_retriever.py
storage/: __init__.py  duckdb_store.py  faiss_store.py  hallucination_firewall.py  orchestrator.py  sqlite_log.py
tests/: conftest.py  test_detach_delete.py  test_firewall.py  test_forget_snapshot.py  test_index_manager_persistence.py  test_kuzu.py  test_kuzu2.py  test_memory_client.py  test_utils_modules.py
utils/: hashing.py  scoring.py
vector/: __init__.py  cache_embedder.py  embedder.py  index_manager.py
(+49 files in other folders)
