[project]
name = "aimemory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "faiss-cpu>=1.14.2",
    "google>=3.0.0",
    "numpy>=2.4.6",
    "openrouter>=0.9.1",
    "pydantic>=2.13.4",
    "sentence-transformers>=5.5.1",
    "structlog>=25.5.0",
]
