[project]
name = "aimemory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "duckdb>=1.5.3",
    "faiss-cpu>=1.14.2",
    "google>=3.0.0",
    "kuzu>=0.11.3",
    "numpy>=2.4.6",
    "openrouter>=0.9.1",
    "orjson>=3.11.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "sentence-transformers>=5.5.1",
    "structlog>=25.5.0",
]
